# FastMultiColSort

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
experiments/: CMakeLists.txt  collect_mcs_time.cpp  collect_rank.cpp  collect_transpose.cpp  collect_whole_query_time.cpp  main_run_an_instance.cpp  main_run_an_instance_hashing.cpp  main_tpch_complete_scenario.cpp  main_tpch_costmodel_accuracy.cpp  main_tpch_exhaustive_actual.cpp  main_tworound_exhaustive.cpp  main_tworound_exhaustive_hashing.cpp  test.cpp
src/: CMakeLists.txt  avxcommon.h  barrier.h  chain_composer.cpp  chain_composer.h  column.h  common.h  composer.cpp  composer.h  generator.h  hashing.h  hybrid_timer.h  mergesort.h  params.h  partition.h  plan_enum_rrs.cpp  plan_enum_rrs.h  rrs.h  stitch_composer.cpp  stitch_composer.h  types.h  zipf.h
tests/: CMakeLists.txt  composer_test.cpp  enum_plan_test.cpp  mergekernel_test.cpp  mergesort_profiling_test.cpp  misc_test.cpp  optimizer_test.cpp  project_profiling_test.cpp  rrs_test.cpp  sortnetwork_test.cpp  subgroup_test.cpp
